[JSC] Fix tryAppendIncrementAddress in B3LowerToAir https://bugs.webkit.org/show_bug.cgi?id=278008 rdar://133742537

Reviewed by Yusuke Suzuki.

This patch fixes two things:
1. Shouldn't emit MoveWithIncrement when the Load node has fence.
2. We only care about the node would be committed internal in
   tryAppendIncrementAddress.

* Source/JavaScriptCore/b3/B3LowerToAir.cpp:
* Source/JavaScriptCore/b3/testb3_3.cpp:
(testLoadPreIndex32):
(testLoadPreIndex64):
(testLoadPostIndex32):
(testLoadPostIndex64):
(testStorePreIndex32):
(testStorePreIndex64):
(testStorePostIndex32):
(testStorePostIndex64):
(addShrTests):

Canonical link: https://commits.webkit.org/282173@main